turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: type mismatch;
 found   : Unit
 required: Int
	bouge(posTabColor(getCouleurSol(),colors),rule)
                         ^